--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
-    "leaflet": "~0.7.7"
+    "leaflet": "~0.7.7",
+    "rbush": "~1.3.5"
   },
   "devDependencies": {
     "chai": "~3.5.0",
