--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,10 @@
     "jquery": "~2.1.1",
     "modernizr": "~2.8.1",
     "leaflet": "~0.7.7",
-    "rbush": "~1.3.5"
+    "rbush": "~1.3.5",
+    "magnific-popup": "~1.1.0",
+    "pure": "~0.6.0",
+    "font-awesome": "~4.6.1"
   },
   "devDependencies": {
     "chai": "~3.5.0",
