--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "rbush": "~1.3.5",
     "magnific-popup": "~1.1.0",
     "pure": "~0.6.0",
-    "font-awesome": "~4.6.1"
+    "font-awesome": "~4.6.1",
+    "purl": "~2.3.1"
   },
   "devDependencies": {
     "chai": "~3.5.0",
